# easyeda-plugin

./: .coveragerc  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT.md  BRANDING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_WORKFLOW.md  GEMINI.md  IMPROVEMENT_PLAN.md  Makefile  README.md  ROADMAP.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
agents/: README.md  bom-planner.md  feasibility-analyst.md  orchestrator.md  placement-planner.md  router.md  schematic-auditor.md  schematic-generator.md  verification-engineer.md
architecture/: 00_AUDIT_REPORT.md  01_EASYEDA_TEARDOWN.md  02_KICAD_TEARDOWN.md  03_TARGET_ARCHITECTURE.md  04_KNOWLEDGE_GRAPH.md  README.md
automation/: README.md
docs/: 00_PHILOSOPHY.md  02_ARCHITECTURE.md  05_BOTTLENECKS.md  06_EASYEDA_INTEGRATION.md  10_MEMORY_AND_STATE.md  13_LESSONS_LEARNED.md  14_CONTRIBUTING.md  15_ROADMAP.md  17_UPSTREAM_TOOLING_VERDICT.md  DOC_GAP_ANALYSIS.md  HW_GAP_ANALYSIS.md  README.md
handbook/: 01-introduction.md  02-installing-tools.md  03-vscode-and-ai.md  04-your-first-project.md  05-bom-planning.md  06-schematic-generation.md  07-pcb-placement.md  08-routing.md  09-verification.md  10-manufacturing.md  README.md  glossary.md  macos-setup.md
knowledge/: README.md  design-standards.md  knowledge-graph.md  knowledge-inheritance.md  learning-db.md  principles.md
pcbflow/: MCP.md  PCBMUNCH.md  README.md  __init__.py  __main__.py  bom_audit.py  cli.py  congestion.py  creepage.py  design_index.py  dfa.py  enet.py  erc.py  feasibility_check.py  gates.py  (+18 more)
(+119 files in other folders)
